前端逻辑优化

--- a/PhoneAsPrompter.csproj
+++ b/PhoneAsPrompter.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
     <ApplicationIcon>2021051306075326_easyicon_net_512.ico</ApplicationIcon>
+    <SignAssembly>true</SignAssembly>
   </PropertyGroup>
 
   <ItemGroup>
